[CSS] Fixing dropdown overlap

--- a/payload/heroes/static/heroes/css/heroes.css
+++ b/payload/heroes/static/heroes/css/heroes.css
@@ -39,6 +39,7 @@
     left:0;
     right:0;
     background:#34495e;
+    z-index:100;
 }
 .card.sidebar hero-selector .hero-select:hover .options{
     display:initial;
